--- a/templates/index.html
+++ b/templates/index.html
@@ -3,21 +3,49 @@
 
 <form action="/results" method="post">
 
+
+
+<div>
+<label>Type of input </label>
+<select name="peptide_type" size="1"> 
+<option value="fasta" selected="">Fasta</option>
+<option value="peptide">Peptide</option>
+</select>
+</div>
+
+<div>
 <label>Enter up to 1000 peptides seperated by a `,`</label>
 <textarea name="peptides" rows="4" cols="50">
-</textarea>    
+</textarea>
+</div>
 
+<div>
 <label>Please select an allele</label>
-<select name="allele" class="form-control">
+<select name="allele" size="12" class="form-control" onchange="addAllele(this)">
     {% for allele in alleles %}
     <option value="{{allele}}">{{allele}}</option>
    {% endfor %}
 </select>
+</br>
+<input id='alleles' spellcheck="false" name="alleles" type="text" value="" size="100">
+
+</div>
 
 <input type="submit"/>
 
 
 </form>
+
+<script>
+
+function addAllele(e) {
+    debugger
+    var allelesElement = document.getElementById('alleles')
+    allelesElement.value = allelesElement.value += e.value+';'
+}
+
+</script>
+
 
 
 {%- endblock content %}
