--- a/static/hammerlab.css
+++ b/static/hammerlab.css
@@ -80,3 +80,26 @@ ul ul {
   top: -1em;
 }
 
+
+textarea#peptide_contents {
+    width: 100%;
+    border-radius: 3px;
+    border-color: rgba(50, 50, 50, 0.57);}
+
+input#selected_alleles {
+    width: 100%;
+    padding: 5px;
+    border: 1px #8a8a8a solid;
+    border-radius: 3px;
+}
+
+.submit_button {
+  float: right;
+  background-color: #268dd8;
+  border: none;
+  border-radius: 3px;
+  padding: 12 15 12 15;
+  color: white;
+  font-weight: bold;
+}
+}
