--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,5 @@
 <html>
   <head>
-     
   <link rel="stylesheet" href="{{ url_for('static', filename='poole.css') }} ">
   <link rel="stylesheet" href="{{ url_for('static', filename='syntax.css') }} ">
   <link rel="stylesheet" href="{{ url_for('static', filename='lanyon.css') }}">
@@ -8,16 +7,18 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='team.css') }}">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <body>
-  
-  <div class="inline">
+
+<div class="container content">
+
+  <div style="padding-top:20px; padding-bottom: 20px;" class="inline">
             <img src="http://www.hammerlab.org/public/ismms%20logo%20no%20text.png">
-            <a href="/" title="Home">Hammer <span id="poc">Lab</span></a>
+            <a href="/" title="Home">Hammer <span id="poc">Lab</span></a> -- MHCFlurry
     </div>
     {% block content %}
     {% endblock %}
-    </div>
+  </div>
   </body>
 </html>
 
