--- a/templates/result.html
+++ b/templates/result.html
@@ -1,8 +1,6 @@
-<html>
-<head>
+{% extends "base.html" -%}
+{% block content -%}
 
-</head>
-<body>
 <table>
 <tr>
 <th>Peptide</th>
@@ -19,6 +17,4 @@
 </tr>
 {% endfor %}
 </table>
-
-</body>
-</html>
+{%- endblock content %}
