--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='team.css') }}">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="{{ url_for('static', filename='jquery.tabletoCSV.js') }}"></script>
   <body>
 
 <div class="container content">
