--- a/templates/index.html
+++ b/templates/index.html
@@ -3,37 +3,33 @@
 
 <form action="/results" method="post">
 
-
-
-<div>
-<label>Type of input </label>
-<select name="peptide_type" size="1"> 
-<option value="fasta" selected="">Fasta</option>
-<option value="peptide">Peptide</option>
-</select>
-</div>
+<h1>MHCflurry {{ mhcflurry_version }}</h1>
+<p>This prediction server generates MHC class I binding predictions using <a href="http://github.com/hammerlab/mhcflurry">MHCflurry.</a></p>
 
 <div>
-<label>Enter up to 1000 peptides seperated by a `,`</label>
-<textarea name="peptides" rows="4" cols="50">
+<label>Enter whitespace-separated peptides or full length sequences in FASTA format:</label>
+<textarea name="peptides" rows="20" cols="80">
 </textarea>
 </div>
+<p />
 
 <div>
-<label>Please select an allele</label>
+<label>Select allele(s):</label>
 <select name="allele" size="12" class="form-control" onchange="addAllele(this)">
     {% for allele in alleles %}
     <option value="{{allele}}">{{allele}}</option>
    {% endfor %}
 </select>
-</br>
-<input id='alleles' spellcheck="false" name="alleles" type="text" value="" size="100">
-
 </div>
 
-<input type="submit"/>
-
-
+<p />
+<div>
+Alleles selected: <input id='alleles' spellcheck="false" name="alleles" type="text" value="" size="100">
+</div>
+<br />
+<div>
+    <input type="submit" />
+</div>
 </form>
 
 <script>
@@ -45,8 +41,6 @@ function addAllele(e) {
 }
 
 </script>
-
-
 
 {%- endblock content %}
 
