--- a/templates/result.html
+++ b/templates/result.html
@@ -1,23 +1,80 @@
 <html>
 <head>
+<title>MHCflurry {{ mhcflurry_version }} prediction results</title>
 
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.16/fh-3.1.3/datatables.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.4.2/css/buttons.dataTables.min.css"/>
+
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.16/fh-3.1.3/datatables.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.4.2/js/dataTables.buttons.min.js
+"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.4.2/js/buttons.flash.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/pdfmake.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/vfs_fonts.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.4.2/js/buttons.html5.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.4.2/js/buttons.print.min.js"></script>
+
+  	<script type="text/javascript" class="init">
+$(document).ready(function() {
+	$('#result').DataTable( {
+        dom: 'Bfrtip',
+        order: [[ 2, "asc" ]],
+        buttons: [
+            'copy', 'csv', 'excel', 'pdf',
+        ]
+    });
+} );
+	</script>
 </head>
+
+<h1>MHCflurry {{ mhcflurry_version }} prediction results</h1>
+<p>Affinity predictions are in nM.</p>
+
+<p>
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+</p>
+
 <body>
-<table>
+<table id="result" class="display" width=""100%>
+
+<thead>
 <tr>
-<th>Peptide</th>
-{% for allele in alleles %}
-<th> {{ allele }} </th>
+{% for col in result.columns %}
+<th> {{ col }} </th>
 {% endfor %}
 </tr>
+</thead>
+
+<tfoot>
 <tr>
-{% for key in result %}
-<td> {{ key }} </td>
-{% for affinity in result[key] %}
+{% for col in result.columns %}
+<th> {{ col }} </th>
+{% endfor %}
+</tr>
+</tfoot>
+
+<tbody>
+<tr>
+{% for (key, row) in result.iterrows() %}
+{% for affinity in row %}
 	<td> {{ affinity }}</td>
 {% endfor %}
 </tr>
 {% endfor %}
+</tbody>
+
+
 </table>
 
 </body>
