--- a/static/poole.css
+++ b/static/poole.css
@@ -299,9 +299,7 @@ tbody tr:nth-child(odd) th {
  */
 
 .message {
-  margin-bottom: 1rem;
-  padding: 1rem;
-  color: #717171;
+  color: darkred;
   background-color: #f9f9f9;
 }
 
