--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" -%}
 {% block content -%}
 
-<form action="/results" method="post">
+<form action="{{ url_for('get_results') }}" method="post">
 
 <h1>MHCflurry {{ mhcflurry_version }}</h1>
 <p>This prediction server generates MHC class I binding predictions using <a href="http://github.com/hammerlab/mhcflurry">MHCflurry.</a></p>
@@ -28,9 +28,9 @@
     <h3>Examples</h3>
         <pre>SIINFEKL SYYNFEKKL</pre>
     <pre>> here's a protein in fasta format
-MDSKGSSQKGSRLLLLLVVSNLLLCQGVVSTPVCPNGPGNCQVSLRDLFDRAVMVSHYIHDLSS
-EMFNEFDKRYAQGKGFITMALNSCHTSSLPTPEDKEQAQQTHHEVLMSLILGLLRSWNDPLYHL
-VTEVRGMKGAPDAILSRAIEIEEENKRLLEGMEMIFGQVIPGAKETEPYPVWSGLPSLQTKDED
+MDSKGSSQKGSRLLLLLVVSNLLLCQGVVSTPVCPNGPGNCQV
+EMFNEFDKRYAQGKGFITMALNSCHTSSLPTPEDKEQAQQTHH
+VTEVRGMKGAPDAILSRAIEIEEENKRLLEGMEMIFGQVIPGA
 ARYSAFYNLLHCLRRDSSKIDTYLKLLNCRIIYNNNC</pre>
     </div>
 </div>
