--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,15 @@
 <html>
   <head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108666897-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-108666897-1');
+    </script>
+
       <title>MHCflurry {{ mhcflurry_version }} prediction server</title>
      
   <link rel="stylesheet" href="{{ url_for('static', filename='poole.css') }} ">
